WIP: adding comparisons

--- a/explore_retap_outcomes.ipynb
+++ b/explore_retap_outcomes.ipynb
@@ -14,7 +14,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sklearn as sk\n",
-    "import scipy\n",
+    "from scipy import stats, signal\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from itertools import product"
@@ -71,7 +71,9 @@
     "FEAT_SEL = ['trace_RMSn',\n",
     "            'coefVar_impactRMS',\n",
     "            'coefVar_intraTapInt',\n",
-    "            'mean_raise_velocity']"
+    "            'mean_raise_velocity']\n",
+    "\n",
+    "NORM_METHOD = 'norm'"
    ]
   },
   {
@@ -87,32 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subs = np.unique([f.split('_')[1] for f in os.listdir(ft_path)])\n",
-    "\n",
-    "print(len(subs), subs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_dict = {}\n",
-    "for sub in subs:\n",
-    "    print(sub)\n",
-    "    files = [f for f in os.listdir(ft_path) if f'{sub}_' in f and 'medoff' in f.lower()]\n",
-    "    on_file = [f for f in files if 'first' in f and 'cdbs' in f.lower()\n",
-    "                and 'stimon' in f.lower()][0]\n",
-    "    off_file = [f for f in files if 'first' in f and 'cdbs' in f.lower()\n",
-    "                and 'stimoff' in f.lower()][0]\n",
+    "def get_unique_subs(ft_path):\n",
     "    \n",
-    "    with open(os.path.join(ft_path, off_file), 'r') as f:\n",
-    "        off_file = json.load(f)\n",
-    "    with open(os.path.join(ft_path, on_file), 'r') as f:\n",
-    "        on_file = json.load(f)\n",
+    "    subs = np.unique([f.split('_')[1] for f in os.listdir(ft_path)])\n",
     "\n",
-    "    files_dict[sub] = {'on': on_file, 'off': off_file}"
+    "    return subs"
    ]
   },
   {
@@ -121,13 +102,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "box_lists = []\n",
-    "box_labels = []\n",
+    "def load_on_off_first10(subs, ft_path, sel_30sec_part='first'):\n",
+    "    \n",
+    "    allowed_part_sel = ['first', 'last', 'full', 'diff']\n",
+    "    \n",
+    "    assert sel_30sec_part in allowed_part_sel, (\n",
+    "        f'sel_30s_part should be in {allowed_part_sel}'\n",
+    "    )\n",
     "\n",
-    "for ft, con in product(FEAT_SEL, ['off', 'on']):\n",
-    "    box_labels.append(f'{ft} {con}')\n",
-    "    values = [files_dict[s][con][ft] for s in subs]\n",
-    "    box_lists.append(values)"
+    "    files_dict = {}\n",
+    "    for sub in subs:\n",
+    "        \n",
+    "        files_dict[sub] = {}\n",
+    "\n",
+    "        # only consider Med OFF recordings\n",
+    "        files = [f for f in os.listdir(ft_path)\n",
+    "                 if f'{sub}_' in f\n",
+    "                 and 'medoff' in f.lower()]\n",
+    "        \n",
+    "        if sel_30sec_part != 'diff':\n",
+    "            # select off and on cont DBS (for first, last, or full)\n",
+    "            for stim in ['off', 'on']:\n",
+    "                json_file = [f for f in files if sel_30sec_part in f\n",
+    "                        and 'cdbs' in f.lower()\n",
+    "                        and f'stim{stim}' in f.lower()][0]\n",
+    "                # load json with features\n",
+    "                with open(os.path.join(ft_path, json_file), 'r') as f:\n",
+    "                    files_dict[sub][stim] = json.load(f)\n",
+    "            \n",
+    "        elif sel_30sec_part == 'diff':\n",
+    "            # select off and on cont DBS for first AND last\n",
+    "            for sel, stim in product(['first', 'last'], ['off', 'on']):\n",
+    "                json_file = [f for f in files if sel in f\n",
+    "                             and 'cdbs' in f.lower()\n",
+    "                             and f'stim{stim}' in f.lower()][0]\n",
+    "                # load json file\n",
+    "                with open(os.path.join(ft_path, json_file), 'r') as f:\n",
+    "                    files_dict[sub][f'{stim}_{sel}'] = json.load(f)\n",
+    "            \n",
+    "    return files_dict"
    ]
   },
   {
@@ -136,25 +149,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method = 'norm'\n",
+    "def norm_feat_lists(box_lists, feat_names,\n",
+    "                    norm_method):\n",
     "\n",
-    "for i_ft, ft in enumerate(FEAT_SEL):\n",
+    "    for i_ft, ft in enumerate(feat_names):\n",
     "\n",
-    "    off = box_lists[i_ft * 2]\n",
-    "    on = box_lists[i_ft * 2 + 1]\n",
+    "        off = box_lists[i_ft * 2]\n",
+    "        on = box_lists[i_ft * 2 + 1]\n",
     "\n",
-    "    if method == 'norm':\n",
-    "        norm_value = np.nanmax(off)\n",
-    "        off = np.array(off) / norm_value\n",
-    "        on = np.array(on) / norm_value\n",
-    "    elif method == 'std':\n",
-    "        norm_m = np.nanmean(off)\n",
-    "        norm_sd = np.nanstd(off)\n",
-    "        off = (np.array(off) - norm_m) / norm_sd\n",
-    "        on = (np.array(on) - norm_m) / norm_sd\n",
+    "        if norm_method == 'norm':\n",
+    "            norm_value = np.nanmax(off)\n",
+    "            off = np.array(off) / norm_value\n",
+    "            on = np.array(on) / norm_value\n",
+    "        elif norm_method == 'std':\n",
+    "            norm_m = np.nanmean(off)\n",
+    "            norm_sd = np.nanstd(off)\n",
+    "            off = (np.array(off) - norm_m) / norm_sd\n",
+    "            on = (np.array(on) - norm_m) / norm_sd\n",
     "\n",
-    "    box_lists[i_ft * 2] = off\n",
-    "    box_lists[i_ft * 2 + 1] = on"
+    "        box_lists[i_ft * 2] = off\n",
+    "        box_lists[i_ft * 2 + 1] = on\n",
+    "\n",
+    "        S, p = stats.ttest_rel(off, on)\n",
+    "        print(f'{ft}: R: {round(S, 3)}, p = {round(p, 5)}')\n",
+    "    \n",
+    "    return box_lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_feature_lists(files_dict, feat_names, subs,\n",
+    "                          norm_method=False,):\n",
+    "\n",
+    "    conditions = ['off', 'on']\n",
+    "\n",
+    "    box_lists = []\n",
+    "    box_labels = []\n",
+    "\n",
+    "    for ft, con in product(feat_names, conditions):\n",
+    "        box_labels.append(f'{ft} {con}')\n",
+    "        values = [files_dict[s][con][ft] for s in subs]\n",
+    "        box_lists.append(values)\n",
+    "    \n",
+    "    if isinstance(norm_method, str):\n",
+    "        assert norm_method in ['norm', 'std'], 'incorrect norm_method'\n",
+    "        box_lists = norm_feat_lists(box_lists=box_lists,\n",
+    "                                feat_names=FEAT_SEL,\n",
+    "                                norm_method=norm_method)\n",
+    "        \n",
+    "    return box_lists, box_labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subs = get_unique_subs(ft_path=ft_path)\n",
+    "\n",
+    "files_dict = load_on_off_first10(subs=subs, ft_path=ft_path,\n",
+    "                                 sel_30sec_part='last')\n",
+    "# TODO: calculate difference first and last!\n",
+    "# TODO: include aDBS\n",
+    "files_dict['sub-529DT76'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subs = get_unique_subs(ft_path=ft_path)\n",
+    "\n",
+    "files_dict = load_on_off_first10(subs=subs, ft_path=ft_path)\n",
+    "\n",
+    "box_lists, box_labels = extract_feature_lists(files_dict=files_dict,\n",
+    "                                              feat_names=FEAT_SEL, subs=subs,\n",
+    "                                              norm_method='norm',)\n"
    ]
   },
   {
@@ -166,7 +248,10 @@
     "SCATTER = True\n",
     "SCATTER_LINES = True\n",
     "\n",
-    "fig_name = f'firstRun_4feats_cDBSOffvsOn_{method}'\n",
+    "SAVE_FIG=False\n",
+    "SHOW_FIG=True\n",
+    "\n",
+    "fig_name = f'firstRun_4feats_cDBSOffvsOn_{NORM_METHOD}'\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "\n",
@@ -199,9 +284,11 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(os.path.join(fig_path, fig_name), dpi=300,\n",
-    "            facecolor='w',)\n",
-    "plt.close()"
+    "if SAVE_FIG:\n",
+    "    plt.savefig(os.path.join(fig_path, fig_name), dpi=300,\n",
+    "                facecolor='w',)\n",
+    "if SHOW_FIG: plt.show()\n",
+    "else: plt.close()"
    ]
   }
  ],
