drafted figures for cDBS off, on, and aDBS

--- a/explore_retap_outcomes.ipynb
+++ b/explore_retap_outcomes.ipynb
@@ -102,11 +102,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_on_off_first10(subs, ft_path, sel_30sec_part='first'):\n",
+    "def load_on_off_first10(subs, ft_path, sel_time='first',\n",
+    "                        stim_task_sel=['cDBS-StimOff', 'cDBS-StimOn',\n",
+    "                                       'aDBS-Preset4'],\n",
+    "                        FEAT_SEL=['trace_RMSn',\n",
+    "                                  'coefVar_impactRMS',\n",
+    "                                  'coefVar_intraTapInt',\n",
+    "                                  'mean_raise_velocity']):\n",
     "    \n",
     "    allowed_part_sel = ['first', 'last', 'full', 'diff']\n",
     "    \n",
-    "    assert sel_30sec_part in allowed_part_sel, (\n",
+    "    assert sel_time in allowed_part_sel, (\n",
     "        f'sel_30s_part should be in {allowed_part_sel}'\n",
     "    )\n",
     "\n",
@@ -116,29 +122,44 @@
     "        files_dict[sub] = {}\n",
     "\n",
     "        # only consider Med OFF recordings\n",
-    "        files = [f for f in os.listdir(ft_path)\n",
-    "                 if f'{sub}_' in f\n",
+    "        files = [f for f in os.listdir(ft_path) if\n",
+    "                 f'{sub}_' in f\n",
     "                 and 'medoff' in f.lower()]\n",
     "        \n",
-    "        if sel_30sec_part != 'diff':\n",
+    "        if sel_time != 'diff':\n",
     "            # select off and on cont DBS (for first, last, or full)\n",
-    "            for stim in ['off', 'on']:\n",
-    "                json_file = [f for f in files if sel_30sec_part in f\n",
-    "                        and 'cdbs' in f.lower()\n",
-    "                        and f'stim{stim}' in f.lower()][0]\n",
+    "            for stim_task in stim_task_sel:\n",
+    "                s1, s2 = stim_task.split('-')\n",
+    "                # print(sub, stim_task, s1, s2)\n",
+    "                json_file = [f for f in files if sel_time in f\n",
+    "                            and s1.lower() in f.lower()\n",
+    "                            and s2.lower() in f.lower()][0]\n",
     "                # load json with features\n",
     "                with open(os.path.join(ft_path, json_file), 'r') as f:\n",
-    "                    files_dict[sub][stim] = json.load(f)\n",
+    "                    files_dict[sub][f'{stim_task}_{sel_time}'] = json.load(f)\n",
     "            \n",
-    "        elif sel_30sec_part == 'diff':\n",
+    "        elif sel_time == 'diff':\n",
     "            # select off and on cont DBS for first AND last\n",
-    "            for sel, stim in product(['first', 'last'], ['off', 'on']):\n",
+    "            temp_dict = {}\n",
+    "            for sel, stim_task in product(['first', 'last'],\n",
+    "                                           stim_task_sel):\n",
+    "                s1, s2 = stim_task.split('-')\n",
     "                json_file = [f for f in files if sel in f\n",
-    "                             and 'cdbs' in f.lower()\n",
-    "                             and f'stim{stim}' in f.lower()][0]\n",
+    "                             and s1.lower() in f.lower()\n",
+    "                             and s2.lower() in f.lower()][0]\n",
     "                # load json file\n",
     "                with open(os.path.join(ft_path, json_file), 'r') as f:\n",
-    "                    files_dict[sub][f'{stim}_{sel}'] = json.load(f)\n",
+    "                    temp_dict[f'{stim_task}_{sel}'] = json.load(f)\n",
+    "\n",
+    "            for stim_task in stim_task_sel:\n",
+    "                files_dict[sub][f'{stim_task}_diff'] = {}    \n",
+    "                for ft in FEAT_SEL:\n",
+    "                    last_value = temp_dict[f'{stim_task}_last'][ft]\n",
+    "                    first_value = temp_dict[f'{stim_task}_first'][ft]\n",
+    "                    files_dict[sub][f'{stim_task}_diff'][ft] = (\n",
+    "                        # (last_value - first_value) / first_value * 100\n",
+    "                        last_value - first_value\n",
+    "                    )\n",
     "            \n",
     "    return files_dict"
    ]
@@ -150,28 +171,47 @@
    "outputs": [],
    "source": [
     "def norm_feat_lists(box_lists, feat_names,\n",
+    "                    conditions,\n",
     "                    norm_method):\n",
+    "\n",
+    "    n_conditions = len(conditions)\n",
     "\n",
     "    for i_ft, ft in enumerate(feat_names):\n",
     "\n",
-    "        off = box_lists[i_ft * 2]\n",
-    "        on = box_lists[i_ft * 2 + 1]\n",
+    "        con1 = box_lists[i_ft * n_conditions]\n",
+    "        con2 = box_lists[i_ft * n_conditions + 1]\n",
+    "        if n_conditions > 2: con3 = box_lists[i_ft * n_conditions + 2]\n",
     "\n",
     "        if norm_method == 'norm':\n",
-    "            norm_value = np.nanmax(off)\n",
-    "            off = np.array(off) / norm_value\n",
-    "            on = np.array(on) / norm_value\n",
+    "            norm_value = np.nanmax(con1)\n",
+    "            # print(ft, norm_value)\n",
+    "            con1 = np.array(con1) / norm_value\n",
+    "            con2 = np.array(con2) / norm_value\n",
+    "            # plt.plot(con1, lw=5, alpha=.5, c='gray')\n",
+    "            # plt.plot(con2, c='red', )\n",
+    "            # plt.title(ft)\n",
+    "            # plt.show()\n",
+    "            if n_conditions > 2: con3 = np.array(con3) / norm_value\n",
+    "        \n",
     "        elif norm_method == 'std':\n",
-    "            norm_m = np.nanmean(off)\n",
-    "            norm_sd = np.nanstd(off)\n",
-    "            off = (np.array(off) - norm_m) / norm_sd\n",
-    "            on = (np.array(on) - norm_m) / norm_sd\n",
+    "            norm_m = np.nanmean(con1)\n",
+    "            norm_sd = np.nanstd(con1)\n",
+    "            con1 = (np.array(con1) - norm_m) / norm_sd\n",
+    "            con2 = (np.array(con2) - norm_m) / norm_sd\n",
+    "            if n_conditions > 2: con3 = (np.array(con3) - norm_m) / norm_sd\n",
     "\n",
-    "        box_lists[i_ft * 2] = off\n",
-    "        box_lists[i_ft * 2 + 1] = on\n",
+    "        box_lists[i_ft * n_conditions] = con1\n",
+    "        box_lists[i_ft * n_conditions + 1] = con2\n",
+    "        if n_conditions > 2: box_lists[i_ft * n_conditions + 2] = con3\n",
     "\n",
-    "        S, p = stats.ttest_rel(off, on)\n",
-    "        print(f'{ft}: R: {round(S, 3)}, p = {round(p, 5)}')\n",
+    "        S, p = stats.ttest_rel(con1, con2)\n",
+    "        print(f'\\n{ft}, {conditions[0]} vs {conditions[1]}: '\n",
+    "              f'R: {round(S, 3)}, p = {round(p, 5)}')\n",
+    "\n",
+    "        if n_conditions > 2:\n",
+    "            S, p = stats.ttest_rel(con1, con3)\n",
+    "            print(f'\\n{ft}, {conditions[0]} vs {conditions[2]}: '\n",
+    "                  f'R: {round(S, 3)}, p = {round(p, 5)}')\n",
     "    \n",
     "    return box_lists"
    ]
@@ -185,28 +225,44 @@
     "def extract_feature_lists(files_dict, feat_names, subs,\n",
     "                          norm_method=False,):\n",
     "\n",
-    "    conditions = ['off', 'on']\n",
+    "    sub1 = list(files_dict.keys())[0]\n",
+    "    # conditions = list(np.unique(\n",
+    "    #     [k.split('_')[0] for k in files_dict[sub1].keys()]\n",
+    "    # ))\n",
+    "    conditions = list(files_dict[sub1].keys())\n",
+    "\n",
+    "    # if 'diff' in conditions[0]:\n",
+    "    #     conditions = list(np.unique(\n",
+    "    #         [c.split('_diff')[0] for c in conditions]\n",
+    "    #     ))\n",
+    "    #     CALC_DIFF = True\n",
+    "    print(f'conditions found: {conditions}')\n",
     "\n",
     "    box_lists = []\n",
     "    box_labels = []\n",
     "\n",
     "    for ft, con in product(feat_names, conditions):\n",
+    "\n",
     "        box_labels.append(f'{ft} {con}')\n",
     "        values = [files_dict[s][con][ft] for s in subs]\n",
+    "        # print(f'{ft}, {con} values found: {values}')\n",
     "        box_lists.append(values)\n",
     "    \n",
     "    if isinstance(norm_method, str):\n",
-    "        assert norm_method in ['norm', 'std'], 'incorrect norm_method'\n",
+    "        assert norm_method in ['norm', 'std', 'none'], 'incorrect norm_method'\n",
     "        box_lists = norm_feat_lists(box_lists=box_lists,\n",
-    "                                feat_names=FEAT_SEL,\n",
-    "                                norm_method=norm_method)\n",
+    "                                    feat_names=FEAT_SEL,\n",
+    "                                    conditions=conditions,\n",
+    "                                    norm_method=norm_method)\n",
     "        \n",
     "    return box_lists, box_labels"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -218,10 +274,8 @@
     "subs = get_unique_subs(ft_path=ft_path)\n",
     "\n",
     "files_dict = load_on_off_first10(subs=subs, ft_path=ft_path,\n",
-    "                                 sel_30sec_part='last')\n",
-    "# TODO: calculate difference first and last!\n",
-    "# TODO: include aDBS\n",
-    "files_dict['sub-529DT76'].keys()"
+    "                                 sel_time='diff',)\n",
+    "\n"
    ]
   },
   {
@@ -230,13 +284,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "NORM_METHOD = 'norm'\n",
+    "\n",
     "subs = get_unique_subs(ft_path=ft_path)\n",
     "\n",
-    "files_dict = load_on_off_first10(subs=subs, ft_path=ft_path)\n",
+    "files_dict = load_on_off_first10(subs=subs, ft_path=ft_path,\n",
+    "                                 sel_time='first')\n",
     "\n",
     "box_lists, box_labels = extract_feature_lists(files_dict=files_dict,\n",
     "                                              feat_names=FEAT_SEL, subs=subs,\n",
-    "                                              norm_method='norm',)\n"
+    "                                              norm_method=NORM_METHOD,\n",
+    "                                              )\n",
+    "print(len(box_lists), box_labels)"
    ]
   },
   {
@@ -251,31 +310,34 @@
     "SAVE_FIG=False\n",
     "SHOW_FIG=True\n",
     "\n",
-    "fig_name = f'firstRun_4feats_cDBSOffvsOn_{NORM_METHOD}'\n",
+    "fig_name = f'diffRun_4feats_OffvsOnvsA4_{NORM_METHOD}'\n",
     "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(16, 12))\n",
     "\n",
-    "fontsize=14\n",
+    "fontsize=18\n",
     "\n",
     "ax.boxplot(box_lists, positions=np.arange(len(box_lists)),)\n",
     "ax.set_xticklabels(box_labels, rotation=90,\n",
     "                   size=fontsize)\n",
-    "if method == 'norm':\n",
+    "if NORM_METHOD == 'norm':\n",
     "    ylabel = 'Normalised feature values\\n(against max OFF value)'\n",
-    "elif method == 'std':\n",
+    "elif NORM_METHOD == 'std':\n",
     "    ylabel = 'Standardised feature values\\n(against OFF values)'\n",
     "\n",
     "if SCATTER:\n",
     "    for i_x, values in enumerate(box_lists):\n",
     "        ax.scatter([i_x] * len(values), values,\n",
-    "                   alpha=.3)\n",
+    "                   alpha=.4, s=100,)\n",
     "if SCATTER_LINES:\n",
     "    for i_ft in np.arange(len(FEAT_SEL)):\n",
     "        for i_sub in np.arange(len(box_lists[i_ft])):\n",
-    "            y1 = box_lists[i_ft * 2][i_sub]\n",
-    "            y2 = box_lists[i_ft * 2 + 1][i_sub]\n",
-    "            ax.plot([i_ft*2, i_ft*2+1], [y1, y2],\n",
-    "                    c='gray', alpha=.3)\n",
+    "            y1 = box_lists[i_ft * 3][i_sub]\n",
+    "            y2 = box_lists[i_ft * 3 + 1][i_sub]\n",
+    "            y3 = box_lists[i_ft * 3 + 2][i_sub]\n",
+    "            ax.plot([i_ft*3, i_ft*3+1], [y1, y2],\n",
+    "                    c='gray', alpha=.5)\n",
+    "            ax.plot([i_ft*3+1, i_ft*3+2], [y2, y3],\n",
+    "                    c='gray', alpha=.5)\n",
     "\n",
     "ax.set_ylabel(ylabel,\n",
     "              size=fontsize)\n",
