checked one specific file

--- a/explore_retap_outcomes.ipynb
+++ b/explore_retap_outcomes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import numpy as np\n",
     "import sklearn as sk\n",
     "from scipy import stats, signal\n",
+    "from scipy import __version__ as scipy_version\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from itertools import product"
@@ -22,9 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python sys 3.9.13 (main, Oct 13 2022, 21:23:06) [MSC v.1916 64 bit (AMD64)]\n",
+      "pandas 1.4.4\n",
+      "numpy 1.23.3\n",
+      "sci-py 1.9.1\n",
+      "sci-kit learn 1.1.2\n"
+     ]
+    }
+   ],
    "source": [
     "# check some package versions for documentation and reproducability\n",
     "print('Python sys', sys.version)\n",
@@ -32,13 +45,13 @@
     "print('numpy', np.__version__)\n",
     "# print('mne_bids', mne_bids.__version__)\n",
     "# print('mne', mne.__version__)\n",
-    "print('sci-py', scipy.__version__)\n",
+    "print('sci-py', scipy_version)\n",
     "print('sci-kit learn', sk.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +364,53 @@
     "                facecolor='w',)\n",
     "if SHOW_FIG: plt.show()\n",
     "else: plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open single result file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get FEATURES\n",
+    "files = os.listdir(ft_path)\n",
+    "\n",
+    "f = [f for f in files if 'task-cDbs' in f\n",
+    " and 'StimOn' in f and '536' in f and 'first' in f][0]\n",
+    "\n",
+    "# load json file\n",
+    "with open(os.path.join(ft_path, f), 'r') as file:\n",
+    "    fts = json.load(file)\n",
+    "\n",
+    "# get ACC-DATA\n",
+    "acc_path = os.path.join(utils_dataMn.get_local_proj_dir(),\n",
+    "                       'aDBS_tapping', 'acc_raw')\n",
+    "files = os.listdir(acc_path)\n",
+    "\n",
+    "f = [f for f in files if 'task-cDbs' in f\n",
+    " and 'StimOn' in f and '536' in f and 'full' in f][0]\n",
+    "\n",
+    "# load csv file\n",
+    "acc = pd.read_csv(os.path.join(acc_path, f), header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt\n",
+    "plt.plot(acc)\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
